--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.1.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^2.1.3",
     "react-scroll": "^1.8.4",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
